[package]
name = "omake"
version = "0.1.4"
edition = "2021"
description = "A Rust implementation of make."
authors = ["Gregory N. Schmit <schmitgreg@gmail.com>"]
license = "MIT"
repository = "https://github.com/gregschmit/omake"
keywords = ["make", "oxidized", "development", "build"]
categories = ["command-line-utilities", "development-tools", "development-tools::build-utils"]

[dependencies]
clap = { version = "4", features = ["derive"], optional = true }
const_format = { version = "0.2", optional = true }

[features]
default = ["bin"]
bin = ["clap", "const_format"]

[lib]
path = "src/lib/_lib.rs"

[[bin]]
name = "omake"
path = "src/main.rs"
required-features = ["bin"]

# Optimize for a small binary.
[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
strip = true
