[package]
name = "omake"
version = "0.1.5"
edition = "2021"
description = "A Rust implementation of make."
authors = ["Gregory N. Schmit <schmitgreg@gmail.com>"]
license = "MIT"
repository = "https://github.com/gregschmit/omake"
keywords = ["make", "oxidized", "development", "build"]
categories = ["command-line-utilities", "development-tools", "development-tools::build-utils"]

[dependencies]
clap = {version = "4", features = ["derive"]}
const_format = "0.2"
lazy_static = "1"

# Optimize for a small binary.
[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
strip = true
